# arcade-ai-interview-kstallone

./: .gitignore  README.md  flow-analysis-report-2025-10-15 22:19:36.md  flow-analysis-report-2025-10-15 23:07:31.md  flow-analysis-report-2025-10-15 23:24:24.md  pyproject.toml
cache/: actions.csv  ai-steps-chain.txt  ai-summary-agentic.txt  ai-summary-chain.txt  processed_actions.csv
cache/image/: image-description.txt  image-url.txt
src/: main.py
src/arcade_flow_analyzer/: __init__.py  basic_extractor.py  extractor.py  image_gen.py  models.py  summarize.py
src/arcade_flow_analyzer/analysis/: __init__.py  csv_preprocessor.py  summarize.py
src/arcade_flow_analyzer/extractors/: __init__.py  basic_extractor.py  extractor.py
src/arcade_flow_analyzer/visualization/: __init__.py  image_gen.py
