[project]
name = "arcade-flow-analyzer"
version = "0.1.0"
description = "Analyzes Arcade flow data and generates comprehensive reports with social media images"
authors = [
    {name = "Kevin Stallone"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.12.1,<3.0.0",
    "python-dotenv>=1.0.0",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.31,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "langchain-openai (>=0.3.35,<0.4.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]

[tool.poetry]
name = "arcade-flow-analyzer"
version = "0.1.0"
description = "Analyzes Arcade flow data and generates comprehensive reports with social media images"
authors = ["Kevin Stallone"]
packages = [{include = "arcade_flow_analyzer", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.12.1"
python-dotenv = "^1.0.0"
langchain = "^0.3.27"
langchain-community = "^0.3.31"
langchain-experimental = "^0.3.4"
langchain-openai = "^0.3.35"
openai = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
